# hoare-logic

./: .gitignore  CMakeLists.txt  Makefile  README.md  compiler.c  include.h  interpreter.c  interpreter.cpp  lexer.l  parser.y  test.txt  test2.txt
tests/: copy.txt  odd.txt  search.txt  sum.txt  test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
